# TenSEAL

./: .bazelrc  README.md  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml  pytest.yml
.github/workflows/scripts/: install_req_docker.sh
cmake/: protobuf.cmake
tenseal/: __init__.py  binding.cpp
tenseal/cpp/tensors/: ckksvector.cpp  ckksvector.h
tenseal/tensors/: ckksvector.py
tests/python/tenseal/tensors/: test_ckks_vector.py
