[tool.black]
target-version = ['py36', 'py37']
line-length = 100
exclude = '''
(
    \.git
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.eggs\/
    | build
    | dist
    | tutorials
    | venv\/
    | test_serde_full\.py
    | third_party
)
'''

[build-system]
requires = ["setuptools>=42", "wheel", "cmake<4"]
build-backend = "setuptools.build_meta"
